--- a/main.css
+++ b/main.css
@@ -176,5 +176,47 @@ nav ul li a:hover{
     border: 3px solid #f5f5f5;
 }
 
+/* ###############Skills############### */
+
+#skills{
+    padding: 40px;
+}
+.skill{
+    text-align: center;
+    margin: 20px 0;
+}
+.skill .fas{
+    color:#2b98f0;
+    padding: 20px;
+    border-radius: 50%;
+    font-size: 60px;
+    transition: transform 0.5s ease-in,background 0.5s ease,color 0.5s ease;
+}
+.skill .fas:hover{
+    transform: scale(0.7);
+    background: #2b98f0;
+    color: #f5f5f5;
+}
+
+.skill h3{
+    margin: 10px 0 15px 0;
+    text-transform: capitalize;
+    font-size: 30px;
+    color: #2b98f0;
+}
+
+.skill p{
+    line-height: 1.5;
+    width: 75%;
+    margin: 0 auto;
+}
+
+
+
+
+
+
+
+
 
 
