--- a/main.css
+++ b/main.css
@@ -462,6 +462,28 @@ nav ul li a:hover{
     margin-right: 10px;
 }
 
+/* portfolio responsive */
+@media screen and (min-width:576px){
+    .portfolio-center{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .work{
+        flex: 0 0 calc(50% - 15px);
+    }
+}
+
+@media screen and (min-width:776px){
+    .work{
+        flex: 0 0 calc(33.3% - 15px);
+    }
+}
+
+
+
+
+
 
 
 
