--- a/main.css
+++ b/main.css
@@ -480,10 +480,57 @@ nav ul li a:hover{
     }
 }
 
+/* ############numbers############## */
+#numbers{
+    padding: 40px;
+}
+.number{
+    margin: 20px 0;
+    text-align: center;
+    transition: transform 2s ease;
+}
+
+.number:hover{
+    transform: translateY(-10px);
+    cursor: pointer;
+}
+
+.number .fab,
+.number .far,
+.number .fas{
+    font-size: 60px;
+    color: #2b98f0;
+}
+
+.number h2{
+    font-size: 40px;
+    margin: 10px 0;
+    font-weight: 900;
+}
+
+.number h5{
+    font-size: 23px;
+    color: #c9c9c9;
+}
+/* number responsive */
+
+@media screen and (min-width:576px){
+    .numbers-center{
+        min-width: 90vw;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .number{
+        flex: 0 0 calc(50% - 10px);
+    }
+}
 
 
-
-
-
+@media screen and (min-width:576px){
+    .number{
+        flex: 0 0 calc(25% - 10px);
+    }
+}
 
 
