--- a/main.css
+++ b/main.css
@@ -534,3 +534,68 @@ nav ul li a:hover{
 }
 
 
+/* ################team##################### */
+#team{
+    padding: 40px;
+    background: #959595;
+}
+.team-member{
+    background: #f5f5f5;
+    margin: 20px 0;
+}
+.team-member img{
+    display: block;
+    width: 100%;
+    max-height: 300px;
+}
+.img-footer{
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.footer-info h3{
+    color: #2b98f0;
+}
+
+.footer-info h5{
+    color: #959595;
+    margin: 10px 0;
+    text-transform: uppercase;
+}
+
+.social-icons .fa{
+    color: #959595;
+    margin: 0 5px;
+}
+.footer-icon{
+    font-size: 40px;
+    color: #2b98f0;
+    opacity: 0;
+    align-self: center;
+    transition: tranform 2s ease ,opacity 2s ease;
+}
+.footer-icon:hover{
+    transform: rotate(-90deg);
+}
+.team-member:hover .footer-icon{
+    opacity: 1;
+}
+/*##################team responsive###################*/
+@media screen and (min-width:576px){
+    #team-center{
+        min-width: 90vw;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .team-member{
+        flex: 0 0 calc(50% - 10px);
+    }
+}
+@media screen and (min-width:776px){
+    
+    .team-member{
+        flex: 0 0 calc(25% - 10px);
+    }
+}
