--- a/main.css
+++ b/main.css
@@ -644,7 +644,67 @@ nav ul li a:hover{
     }
 }
 
+/* #####################Contact Us################## */
+#contact{
+    padding: 40px;
+    background: #2b98f0;
+    color: #f5f5f5;
+}
 
+#contact .title-underline{
+    border-color: #f5f5f5;
+}
 
+.item-info{
+    display: flex;
+    margin: 20px 0;
+    font-size: 30px;
+}
 
+.item-info .fas{
+    margin-right: 20px;
+}
 
+form input{
+    display: block;
+    width: 100%;
+    margin: 10px 0;
+    font-size: 25px;
+    padding: 10px;
+    background: transparent;
+    border: none;
+    border-bottom: 4px solid #f5f5f5;
+}
+form input::placeholder{
+    color: #f5f5f5;
+}
+#customer-info a{
+    display: block;
+    padding: 20px;
+    margin-top: 30px;
+    text-decoration: none;
+    font-size: 30px;
+    display: flex;
+    justify-content: space-around;
+    color: #f5f5f5;
+    background: #191919;
+    transition: background 2s ease;
+}
+#customer-info a:hover{
+    background: #c9c9c9;
+}
+
+/* Contact Responsive */
+@media screen and (min-width:776px){
+    .contact-center{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    #company-info{
+        flex: 0 0 calc(50% - 10px);
+    }
+    #customer-info{
+        flex: 0 0 calc(50% - 10px);
+    }
+}
